--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,19 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+/*** SWIPE LIST OVERRIDES **/
+.swipeable-list-item__leading-actions, 
+.swipeable-list-item__trailing-actions {
+  @apply text-white text-lg uppercase font-bold;
+}
+.swipeable-list-item__leading-actions{
+  @apply bg-blue-600;
+}
+.swipeable-list-item__trailing-actions {
+  @apply bg-pink-600;
+}
+.swipeable-list .swipe-action {
+  @apply flex justify-center items-center
+}
+
